--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ p {
 .right-arrow::before {
     content: '\f061';
 }
-.foot-right-arrow::before {
+.promote-right-arrow::before {
     content: '\f061';
 }
 .footer-phone::before {
@@ -79,7 +79,7 @@ p {
     margin: 202px auto 238px;
     border-radius: 50%;
 }
-.foot-right-arrow {
+.promote-right-arrow {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -101,12 +101,13 @@ p {
     justify-content: space-between;
     padding: 12px 0;
     gap: 35px;
+    position: relative;
 }
 .navbar--1 {
     background: #000000;
 }
 .navbar--number {
-    font-family: Arial;
+    font-family: 'mazda';
     color: #FFFFFF;
     font-weight: 700;
     font-size: 18px;
@@ -127,6 +128,7 @@ p {
     font-size: 12px;
     line-height: 29px;
     letter-spacing: 0.1em;
+    font-family: 'mazda';
     color: #FFFFFF;
     text-transform: uppercase;
     padding: 6px 18px;
@@ -148,11 +150,57 @@ p {
     justify-content: center;
     gap: 10px;
     padding: 10px;
+    background: blue;
+    z-index: 3;
 }
 .navbar-burger span {
     width: 100%;
     height: 3px;
     background: white;
+}
+.navbar-list {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 1090px;
+    display: none;
+    gap: 30px;
+    align-items: center;
+    flex-direction: column;
+    background: #14141B;
+    z-index: 2;
+    transition: all 1s;
+    animation-name: navList;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    transition: all 2s;
+    padding: 20px 0;
+}
+@keyframes navList{
+0%{
+    left: 1200px;
+}
+100%{
+    left: 0;
+}
+}
+.navbar-link {
+    color: #FFFFFF;
+    font-family: 'mazda';
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 1.68px;
+    text-transform: uppercase;
+    text-align: center;
+}
+@keyframes navList2{
+0%{
+    left: 0;
+}
+100%{
+    left: 1200px;
+}
 }
 /* NAVBAR 2 */
 .navbar {
@@ -214,7 +262,7 @@ p {
 /* HEADER 2 */
 .cards {
     background: #f5f5f5;
-    padding: 57px auto 71px;
+    padding: 57px 0 71px;
 }
 .cards-content {
     min-height: 593px;
@@ -466,6 +514,7 @@ p {
 }
 /* HEADER 6 */
 .repair {
+    padding: 65px 0 71px;
     background: #F5F5F5;
 }
 .header-title {
@@ -592,6 +641,71 @@ p {
     line-height: 33px;
     text-align: center;
 }
+/* PROMOTION */
+.promotion {
+    padding: 68px 0 77px;
+}
+.promotion-content {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+.promotion-title {
+    color: #FFF;
+    font-family: 'mazda';
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 27px;
+    text-transform: uppercase;
+    padding: 8px 27px 11px 21px;
+    background: url('../imgs/action.png') center center / cover no-repeat;
+    display: inline-flex;
+    margin-top: 17px;
+}
+.promotion-img {
+    height: 100%;
+    width: 30%;
+    min-height: 239px;
+    background: url('../imgs/footer2-img.png') center center / cover no-repeat;
+}
+.promotion-content-box {
+    height: 100%;
+
+    width: 70%;
+    background: #F4F4F4;
+}
+.promotion-text {
+    padding: 39px 50px 36px 68px;
+    color: #101015;
+    font-family: 'mazda';
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150.2%;
+}
+.promotion-inner-box {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 31px;
+}
+.promotion-line {
+    width: 100%;
+    height: 2px;
+    background: #CECECE;
+}
+.promote-mini-text {
+    color: #4E4E4E;
+    font-family: 'mazda';
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 1.365px;
+    text-transform: uppercase;
+}
+
+
+
 /* FOOTER 1 */
 .form {
     padding: 46px 0 82px;
@@ -685,11 +799,8 @@ p {
     line-height: 200.7%;
     letter-spacing: 0.75px;
     text-transform: uppercase;
-}
-.foot-line {
-    width: 100%;
-    height: 2px;
-    background: rgba(208, 208, 208, 0.29);
+    padding-bottom: 15px;
+    border-bottom: 2px solid rgba(208, 208, 208, 0.29);
 }
 .foot-line2 {
     width: 100%;
@@ -753,10 +864,10 @@ p {
 /* PAGE 2 ///////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 /* HEADER 1 */
-.header--1-p2 {
+.header-p2 {
     background: url('../imgs/page2-header-back.png') center center / cover no-repeat;
 }
-.header1-p2 {
+.header-content-p2 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -765,14 +876,14 @@ p {
 .head1-spec-text {
     color: #BABABA;
 }
-.head1-text1-p2 {
+.header-text1-p2 {
     color: #FFF;
     font-size: 16px;
     font-family: 'mazda';
     font-weight: 400;
     line-height: 147.7%;
 }
-.head1-text2-p2 {
+.header-text2-p2 {
     color: #FFF;
     font-size: 42px;
     font-family: 'mazda';
@@ -781,7 +892,7 @@ p {
     text-transform: uppercase;
     margin: 17px 0 15px;
 }
-.head1-text3-p2 {
+.header-text3-p2 {
     color: #FFF;
     font-size: 20px;
     font-family: 'mazda';
@@ -789,22 +900,22 @@ p {
     line-height: 147.7%;
 }
 /* HEADER 2 */
-.header2-p2 {
+.header-text-p2 {
     padding: 20px 0;
 }
-.header2-content-p2 {
+.header-txt-content-p2 {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
 }
-.head2-text-p2 {
+.head-txt-text-p2 {
     color: #313131;
     font-size: 18px;
     font-family: 'mazda';
     font-weight: 400;
     line-height: 155%;
 }
-.head2-sp-text-p2 {
+.head-txt-sp-text-p2 {
     color: #000;
     font-size: 18px;
     font-family: 'mazda';
@@ -815,17 +926,17 @@ p {
     border-left: 3px solid #910A2D;
 }
 /* HEADER 3 */
-.header3-p2 {
+.form-content-p2 {
     display: flex;
     align-items: center;
     margin: 30px auto 71px;
 }
-.head3-img-p2 {
+.form-img-p2 {
     width: 50%;
     height: 300px;
     background: url('../imgs/page2-header2-back.png') center center / cover no-repeat;
 }
-.head3-form-p2 {
+.form-box-p2 {
     width: 50%;
     height: 300px;
     background: #F5F5F5;
@@ -834,7 +945,7 @@ p {
     flex-direction: column;
     align-items: center;
 }
-.h3-form-p2 {
+.form-input-p2 {
     padding: 12px 200px 14px 20px;
     border-radius: 2px;
     border: 1px solid #DDD;
@@ -845,7 +956,7 @@ p {
     font-weight: 400;
     line-height: 150.2%;
 }
-.h3-form2-p2 {
+.form-input2-p2 {
     padding: 12px 200px 14px 20px;
     border-radius: 2px;
     border: 1px solid #DDD;
@@ -875,13 +986,13 @@ p {
     border-radius: 50%;
 }
 /* HEADER 4 */
-.header--4-p2 {
+.price-p2 {
     background: #F5F5F5;
 }
-.header4-p2 {
+.price-content {
     padding: 62px 0 55px;
 }
-.head4-title-p2 {
+.price-title-p2 {
     margin-bottom: 77px;
 }
 .gen-heading-p2 {
@@ -933,39 +1044,39 @@ p {
     font-weight: 400;
     line-height: 135.2%;
 }
-.head4-box-p2 {
+.price-box-p2 {
     background: #FFF;
     width: 100%;
     height: 100%;
     border-top: 3px solid #910A2D;
 }
-.head4-content-p2 {
+.price-content-p2 {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
     gap: 30px;
 }
-.head4-box2-p2 {
+.price-box2-p2 {
     padding-bottom: 50px;
 }
 /* HEADER 5  */
-.header5-p2 {
+.breaking-p2 {
     padding: 62px 0 82px;
 }
-.head5-line-p2 {
+.breaking-line-p2 {
     margin: 28px auto 56px;
 }
-.head5-content-p2 {
+.breaking-content-p2 {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
-.page2-line {
+.breaking-line {
     width: 100%;
     height: 2px;
     background: #DFDFDF;
 }
-.head5-box-title-p2 {
+.breaking-title-p2 {
     width: 20%;
     color:#101015;
     font-size: 20px;
@@ -973,7 +1084,7 @@ p {
     font-weight: 700;
     line-height: 135.2%;
 }
-.head5-text-p2 {
+.breaking-text-p2 {
     width: 80%;
     color: #313131;
     font-size: 18px;
@@ -981,15 +1092,13 @@ p {
     font-weight: 400;
     line-height: 155%;
 }
-.head5-inner-box-p2 {
+.breaking-inner-box-p2 {
     display: flex;
     align-items: baseline;
     gap: 50px;
-}
-.head5-inner-box-p2 {
     padding: 20px 0;
 }
-.head5-button-p2 {
+.breaking-button-p2 {
     color: #FFF;
     font-size: 13px;
     font-family: 'mazda';
@@ -1002,7 +1111,7 @@ p {
     margin: 35px 0 47px;
     padding: 6px 28px 6px 34px;
 }
-.head5-last-text-p2 {
+.breaking-last-text {
     color:#101015;
     font-size: 18px;
     font-family: 'mazda';
@@ -1012,31 +1121,31 @@ p {
     border: 3px solid #910A2D;
 }
 /* HEADER 6 */
-.header--6-p2 {
+.repair-p2 {
     padding: 62px 0 130px;
     background: #F5F5F5;
 }
-.head6-line-p2 {
+.repair-line-p2 {
     margin: 28px auto 47px;
 }
-.head6-content-p2 {
+.repair-content-box-p2 {
     display: flex;
     align-items: baseline;
     background: #FFFFFF;
 }
-.head6-text-p2 {
+.repair-text-p2 {
     color: #313131;
     font-size: 18px;
     font-family: 'mazda';
     font-weight: 400;
     line-height: 150.2%;
 }
-.head6-box1-p2 {
+.repair-box1-p2 {
     width: 50%;
     padding: 37px 36px 60px 52px;
     border-right: 1px dashed #939393;
 }
-.head6-box2-p2 {
+.repair-box2-p2 {
     width: 50%;
     padding: 37px 62px 95px 47px;
 }
@@ -1044,10 +1153,10 @@ p {
 /* PAGE 3     ////////////////////////////////////////////////////////////////////////////////////// */
 
 /* HEADER 1 */
-.header--1-p3 {
+.header-p3 {
     background: url('../imgs/header1-back-p3.png'), lightgray 50% / cover no-repeat;
 }
-.header1-p3 {
+.header-inner-p3 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1067,17 +1176,26 @@ p {
     line-height: 17px;
     color: #3A3A3A;
 }
+.repair-links-p3 {
+    display: flex;
+    flex-wrap: nowrap;
+    font-family: 'mazda';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 17px;
+    color: #3A3A3A;
+}
 /* HEADER 4 */
-.header--4-p3 {
+.price-p3 {
     background: #F5F5F5;
 }
-.header4-p3 {
+.price-content-p3 {
     padding: 62px 0 97px;
     display: flex;
     flex-direction: column;
     gap: 59px;
 }
-.header4-title-p3 {
+.price-title-p3 {
     color: #101015;
     text-align: center;
     font-size: 30px;
@@ -1087,74 +1205,88 @@ p {
     letter-spacing: 3.6px;
     text-transform: uppercase;
 }
-.header4-content-p3 {
+.price-inner-content-p3 {
     display: flex;
     align-items: baseline;
     gap: 30px;
 }
-.head4-box1-p3 {
+.price-box1-p3 {
     width: 50%;
     border-top: 3px solid #910A2D;
     background: #FFF;
     padding: 40px 42px 40px 37px;
 }
-.head4-box2-p3 {
+.price-box2-p3 {
     width: 50%;
     border-top: 3px solid #910A2D;
     background: #FFF;
     padding: 40px 21px 40px 38px;
 }
-.head4-innerbox-p3 {
+.price-innerbox-p3 {
     border-bottom: 1px dashed #939393;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 0;
 }
-.head4-innerbox2-p3 {
+.price-innerbox2-p3 {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 0;
 }
-.head4-text-p3 {
+.price-text-p3 {
     color: #313131;
     font-size: 18px;
     font-family: 'mazda';
     font-weight: 400;
     line-height: 135.2%;
 }
-.head4-text2-p3 {
+.price-text2-p3 {
     color: #910A2D;
     font-size: 18px;
     font-family: 'mazda';
     font-weight: 400;
     line-height: 135.2%;
 }
+.price-num-p3 {
+    color: #313131;
+    font-family: 'mazda';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 135.2%;
+}
 /* MEDIA */
 @media(max-width: 1450px ){
     .comment-button-p2 {display: none;}
-    .header3-p2 {flex-direction: column;}
-    .head3-img-p2 {width: 80%;}
-    .head3-form-p2 {width: 80%;}
+    .form-content-p2 {flex-direction: column;}
+    .form-img-p2 {width: 80%;}
+    .form-box-p2 {width: 80%;}
 }
 @media(max-width: 1350px) {
+    .promotion-img {min-height: 225px;}
+    .promotion-text {padding: 30px;}
     .navbar1 {gap: 0;}
+    .form-img-p2 {width: 90%;}
+    .form-box-p2 {width: 90%;}
+    .promotion-img {width: 20%;}
+    .promotion-content-box {width: 80%;}
 }
 @media(max-width: 1200px) {
     .navbar--adress__text {display: none;}
-    .navbar--number {display: none;}
     .navbar-burger {display: flex;}
-    .navbar--send__button {display: none;}
+    .icons-box {display: none;}
 }
 @media(max-width: 1180px) {
-    .icons-box {display: none;}
+    .price-box1-p3 {width: 90%;}
+    .price-box2-p3 {width: 90%;}
+    .price-inner-content-p3 {flex-direction: column;align-items: center;}
+    .promotion-content {flex-direction: column;}
+    .promotion-img {width: 100%;}
+    .promotion-content-box {width: 100%;}
     .head2-card-box {flex-direction: column;}
     .cars-card-box {flex-direction: column;}
     .cars {align-items: center;}
-    .head4-box1-p3 {width: 90%;}
-    .header4-content-p3 {flex-direction: column;align-items: center;}
-    .head4-box2-p3 {width: 90%;}
     .header3-card {display: flex;align-items: center;justify-content: space-between;}
     .advantages-box1 {flex-direction: column;align-items: baseline;}
     .advantages-box2 {flex-direction: column;align-items: baseline;}
@@ -1179,7 +1311,7 @@ p {
     .footer-content {flex-direction: column;row-gap: 30px;text-align: center;}
     .foot-inner-box {flex-direction: column;text-align: center;}
     .footer-paper--plane {margin-left: 30px;}
-    .head4-content-p2 {flex-direction: column;}
+    .price-content-p2 {flex-direction: column;}
     .h4-inner-box1-p2 {flex-direction: column;}
     .h4-inner-box-sp-p2 {flex-direction: column;}
     .h4-inner-box-p2 {flex-direction: column;}
@@ -1188,37 +1320,41 @@ p {
     .technics-boxes {flex-direction: column;}
     .footer_form {flex-direction: column;display: flex;gap: 10px;}
     .footer-form-special {margin: 0;}
-    .head6-content-p2 {flex-direction: column;}
-    .head6-box1-p2 {width: 90%;margin: 0 auto;}
-    .head6-box1-p2 {border-right: none;border-bottom: 1px dashed #939393;}
-    .head6-box2-p2 {width: 90%;margin: 0 auto;}
-    .header1-p2 {text-align: center;}
-    .head5-inner-box-p2 {flex-direction: column;align-items: center;text-align: center;}
-    .head5-box-title-p2 {width: 100%;}
-    .head5-text-p2 {width: 100%;}
-    .head5-last-text-p2 {text-align: center;padding: 10px;}
+    .repair-content-box-p2 {flex-direction: column;}
+    .repair-box1-p2 {width: 90%;margin: 0 auto;}
+    .repair-box1-p2 {border-right: none;border-bottom: 1px dashed #939393;}
+    .repair-box2-p2 {width: 90%;margin: 0 auto;}
+    .header-content-p2 {text-align: center;}
+    .breaking-inner-box-p2 {flex-direction: column;align-items: center;text-align: center;}
+    .breaking-title-p2 {width: 100%;}
+    .breaking-text-p2 {width: 100%;}
+    .breaking-last-text {text-align: center;padding: 10px;}
+    .navbar-list {animation-duration: 1.5s;}
 }
 @media(max-width: 768px) {
+    .navbar--number {display: none;}
 }
 @media(max-width: 678px) {
+    .price-title-p3 {font-size: 24px;}
+    .price-innerbox-p3 {flex-direction: column;}
+    .price-innerbox2-p3 {flex-direction: column;}
+    .price-box1-p3 {padding: 10px;text-align: center;}
+    .price-box2-p3 {padding: 10px;text-align: center;}
     .head5-text1 {font-size: 25px;}
     .head5-text2 {font-size: 18px;}
     .head5-text3 {font-size: 18px;}
     .general-heading {font-size: 25px;}
-    .header4-title-p3 {font-size: 24px;}
-    .head4-innerbox-p3 {flex-direction: column;}
-    .head4-innerbox2-p3 {flex-direction: column;}
-    .h3-form-p2 {padding: 10px 100px 10px 10px;}
-    .h3-form2-p2 {padding: 10px 100px 10px 10px;}
-    .head4-box1-p3 {padding: 10px;text-align: center;}
-    .head4-box2-p3 {padding: 10px;text-align: center;}
+    .form-input-p2 {padding: 10px 100px 10px 10px;}
+    .form-input2-p2 {padding: 10px 100px 10px 10px;}
+    .navbar-list {animation-duration: 1s;}
 }
 @media(max-width: 576px) {
     .advantages-text {font-size: 15px;}
     .navbar {justify-content: center;}
-    .head6-box1-p2 {width: 100%;padding: 15px;}
-    .head6-box2-p2 {width: 100%;padding: 15px;}
+    .repair-box1-p2 {width: 100%;padding: 15px;}
+    .repair-box2-p2 {width: 100%;padding: 15px;}
     .navbar--list {flex-direction: column;}
+    .navbar--send__button {display: none;}
 }
 @media(max-width: 480px) {
     .header1--content {text-align: center;}
@@ -1227,11 +1363,12 @@ p {
     .header1--text {font-size: 14px;}
     .header3-card {display: inline;}
     .footer2-img {width: 90%;}
-    .head1-text1-p2 {font-size: 13px;}
-    .head1-text2-p2 {font-size: 30px;}
-    .head1-text3-p2 {font-size: 15px;}
-    .h3-form-p2 {padding: 10px 50px 10px 10px;}
-    .h3-form2-p2 {padding: 10px 50px 10px 10px;}
+    .header-text1-p2 {font-size: 13px;}
+    .header-text2-p2 {font-size: 30px;}
+    .header-text3-p2 {font-size: 15px;}
+    .form-input-p2 {padding: 10px 50px 10px 10px;}
+    .form-input2-p2 {padding: 10px 50px 10px 10px;}
+    .navbar-list {animation-duration: 0.8s;}
 }
 @media(max-width: 375px) {
     .h3-form-p2 {padding: 10px 20px 10px 10px;}
